--- a/public/Newspaper.html
+++ b/public/Newspaper.html
@@ -41,7 +41,7 @@
     
 <main class="form-signin w-100 m-auto">
   <form  action="/" method="POST">
-    <img class="mb-4" src="/public/download.jpg" alt="" width="72" height="57">
+    <img class="mb-4" src="download.jpg" alt="" width="72" height="57">
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
      
     <div class="form-floating">
